Camlp4 Version 3.03
-------------------

- [07 Sep 01] Included Camlp4 in OCaml distribution.
- [06 Sep 01] Added missing pattern construction #t
- [05 Sep 01] Fixed bug in pa_o: {A.B.c = d} was refused.
- [26 Aug 01] Fixed bug: in normal and revised syntaxes, refused -1.0
  (minus float) as pattern.
- [24 Aug 01] Fixed bug: (a : b :> c) and ((a : b) :> c) were parsed
  identically.
- [20 Aug 01] Fixed configure script for Windows configuration.
- [10 Aug 01] Fixed bug: <:expr< 'a' >> did not work because of a typing
  problem.
- [10 Aug 01] Fixed bug in compilation process under Windows: the use of
  the extension .exe was missing in several parts in Makefiles and shell
  scripts.
- [09 Aug 01] Changed message error in grammar: in the case when the rule
  is: ....; tok1; tok2; .. tokn; ... (n terminal tokens following each other),
  where the grammar is locally LL(n), it displays now:
      tok1 tok2 .. tokn expected
  instead of just
      tok1 expected
  because "tok1" can be correct in the input, and in this case, the message
  underscored the tok1 and said "tok1 expected".
- [07 Aug 01] When camlp4r.cma is loaded in the toplevel, the results are
  now displayed in revised syntax.
- [04 Aug 01] Added syntax "declare..end" in quotations class_str_item and
  class_sig_item to be able to generate several items from one only item
  (like in str_item and sig_item).

Camlp4 Version 3.02
-------------------

- [21 Jul 01] Fixed bug: <:expr< { l = x } >> was badly built and resulted
  in a typing error.
- [13 Jul 01] Fixed bug: did not accept floats in patterns.
- [11 Jul 01] Added function Pcaml.top_printer to be able to use the
  printers Pcaml.pr_expr, Pcaml.pr_patt, and so on for the #install_printer
  of OCaml toplevel. Ex:
      let f = Pcaml.top_printer Pcaml.pr_expr;;
      #install_printer f;;
      #load "pr_o.cmo";;
- [24 Jun 01] In grammars, added symbol ANY, returning the current token,
  whichever it is.